src/compiler/snapshots/isa__compiler__lexer__tests__ident-17.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"_01infixl\").next()"
---
Some(
    Ok(
        Spand {
            data: Ident(
                "_01infixl",
            ),
            span: SpanData { file_id: 0, start: 0, end: 9 },
        },
    ),
)
