src/compiler/snapshots/isa__compiler__lexer__tests__ident-18.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"_01infixr\").next()"
---
Some(
    Ok(
        Spand {
            data: Ident(
                "_01infixr",
            ),
            span: SpanData { file_id: 0, lo: 0, hi: 9 },
        },
    ),
)
