src/compiler/snapshots/isa__compiler__lexer__tests__ident-19.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"mengoprefix\").next()"
---
Some(
    Ok(
        Spand {
            data: Ident(
                "mengoprefix",
            ),
            span: SpanData { file_id: 0, start: 0, end: 11 },
        },
    ),
)
