src/compiler/snapshots/isa__compiler__lexer__tests__ident-2.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"letf\").next()"
---
Some(
    Ok(
        Spand {
            data: Ident(
                "letf",
            ),
            span: SpanData { file_id: 0, start: 0, end: 4 },
        },
    ),
)
