src/compiler/snapshots/isa__compiler__lexer__tests__ident-20.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"amatch\").next()"
---
Some(
    Ok(
        Spand {
            data: Ident(
                "amatch",
            ),
            span: SpanData { file_id: 0, start: 0, end: 6 },
        },
    ),
)
