src/compiler/snapshots/isa__compiler__lexer__tests__ident-22.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"cin\").next()"
---
Some(
    Ok(
        Spand {
            data: Ident(
                "cin",
            ),
            span: SpanData { file_id: 0, lo: 0, hi: 3 },
        },
    ),
)
