src/compiler/snapshots/isa__compiler__lexer__tests__ident-23.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"dwith\").next()"
---
Some(
    Ok(
        Spand {
            data: Ident(
                "dwith",
            ),
            span: SpanData { file_id: 0, start: 0, end: 5 },
        },
    ),
)
