src/compiler/snapshots/isa__compiler__lexer__tests__ident-24.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"emodule\").next()"
---
Some(
    Ok(
        Spand {
            data: Ident(
                "emodule",
            ),
            span: SpanData { file_id: 0, lo: 0, hi: 7 },
        },
    ),
)
