src/compiler/snapshots/isa__compiler__lexer__tests__ident-25.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"self\").next()"
---
Some(
    Ok(
        Spand {
            data: Ident(
                "self",
            ),
            span: SpanData { file_id: 0, lo: 0, hi: 4 },
        },
    ),
)
