src/compiler/snapshots/isa__compiler__lexer__tests__ident-3.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"vals\").next()"
---
Some(
    Ok(
        Spand {
            data: Ident(
                "vals",
            ),
            span: SpanData { file_id: 0, start: 0, end: 4 },
        },
    ),
)
